Fix Levels table cutoff mobile

--- a/src/game/game_static/leaderboard.css
+++ b/src/game/game_static/leaderboard.css
@@ -220,8 +220,8 @@ tr th, tr td {
     #ceremony, #text-section {
         width: 80% !important;
     }
-    #levels-container {
-        width: 100%;
+    #levels-container, #levels-table {
+        width: 100% !important;
     }
     #time-header {
         flex-direction: column;
